--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.26",
+    "async-storage": "^0.1.0",
+    "axios": "^1.12.1",
     "expo": "~54.0.1",
     "expo-constants": "~18.0.8",
     "expo-font": "~14.0.7",
     "expo-haptics": "~15.0.6",
     "expo-image": "~3.0.7",
+    "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.7",
     "expo-router": "~6.0.0",
     "expo-splash-screen": "~31.0.8",
@@ -27,21 +32,30 @@
     "expo-symbols": "~1.0.6",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.6",
+    "firebase": "^12.2.1",
+    "openai": "^5.20.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-worklets": "0.5.1",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-paper": "^5.14.5",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.0"
+    "react-native-svg": "^15.13.0",
+    "react-native-web": "~0.21.0",
+    "react-native-worklets": "0.5.1",
+    "victory": "^37.3.6",
+    "victory-native": "^41.20.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "typescript": "~5.9.2",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0"
+    "eslint-config-expo": "~10.0.0",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
