--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-firebase/app": "^23.3.1",
+    "@react-native-firebase/auth": "^23.3.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.17",
@@ -33,6 +35,7 @@
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.6",
     "firebase": "^12.2.1",
+    "lottie-react-native": "^7.3.4",
     "openai": "^5.20.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
