--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DEEPSEEK_API_KEY=sk-8bfff00b608d476fb7fdc298a148bea2
 DEEPSEEK_API_URL=https://api.deepseek.com/v1/chat/completions
+EAS_SKIP_AUTO_FINGERPRINT=1
